# oakd_kimera

./: .gitignore  CMakeLists.txt  oakd_kimera.bash  readme.md
params/OAK-D/: LeftCameraParams.yaml  RightCameraParams.yaml  calc_params.py  readme.md
src/: main.cpp  util.cpp  util.h
